fix boolean ctor